styles.css
* {
    font-family: 'Roboto', sans-serif;
}

body {
    margin: 0;
}

.header {
    background-color: #1F2937;
    padding: 32px 256px;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.logo {
    font-size: 24px;
    font-weight: bold;
    color: #F9FAF8;
}

.header-links {
    font-size: 18px;
    color: #E5E7EB;
    list-style-type: none;
    display: flex;
    margin: 0;
    gap: 16px;
}

.hero {
    background-color: #1F2937;
    padding: 96px 256px;
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.hero-content {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    flex-wrap: wrap;
    width: 500px;
    gap: 24px;
}

.hero-main-text {
    font-size: 48px;
    font-weight: 900;
    color: #F9FAF8;
}

.hero-secondary-text {
    font-size: 18px;
    color: #E5E7EB;
}

.signup {
    background-color: #3882F6;
    color: #F9FAF8;
    font-size: 18px;
    font-weight: bold;
    border-radius: 10px;
    border: none;
    padding: 8px 32px;
}

.hero-image {
    width: 550px;
}

.info {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 32px 256px 96px 256px;
}

.info-title {
    color:#1F2937;
    font-size: 36px;
    font-weight: 900;
}

.info-content {
    display: flex;
    justify-content: center;
    align-items: center;
}

.info-image {
    margin: 32px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.info-image img {
    border: 5px solid ;
    border-radius: 15px;
    border-color:#3882F6;
    width: 200px;
    margin-bottom: 8px;
}

.caption {
    color: gray;
    font-size: 18px;
    text-align: center;
    width: 200px;
}

.quote {
    background-color: #E5E7EB;
    padding: 96px 256px;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.quote-text {
    font-size: 36px;
    font-style: italic;
    font-weight: 300;
}

.quote-attribution {
    font-size: 24px;
    font-weight: bold;
}

